--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
             width: 100px;
             height: 100px;
             background:red;
+            position:fixed;
         }
     </style>
 </head>
